# cgkit

./: .gitignore  MANUAL.md  README.md  VISUALIZATION_CHANGES.md  cgkit.py  config.json  pyproject.toml  technical_report_soap_pca_tsne_clustering.md  workflow_introduction.md
cglib/: __init__.py  analyze_atomic.py  analyze_cg.py  cg_gen.py  cg_verify.py  cli.py  config.py  deepmd_conv.py  fparam.py  io_utils.py  lammps.py  parallel.py  paths.py  plot_test.py  pt_plot.py  select_structures.py
legacy/: 02-get_CGdata_parall.py  03-trans_CGnpy_parall.py  0x-analyze_atomic_structure.py  0x-analyze_cg_data.py  generate_fparam.py
